--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="app">
-      <div class="">
+      <div>
         <div class="iconfont server">&#xe778;</div>
         <div class="text">
           <button 
@@ -63,5 +63,7 @@
       </div>
     </div>
   </body>
+  <script src="canvas.js"></script>
   <script src="index.js"></script>
+  
 </html>
