modularized server and realized static

--- a/browser/src/index.html
+++ b/browser/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>分布式网络控制系统</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="babel.js"></script>
-    <script src="vue.js"></script>
+    <link rel="stylesheet" href="./static/index.css">
+    <script src="./static/babel.js"></script>
+    <script src="./static/vue.js"></script>
   </head>
   <body>
     <div id="app">
@@ -27,6 +27,6 @@
       
     </div>
   </body>
-  <script src="canvas.js"></script>
-  <script src="index.js"></script>
+  <script src="./static/canvas.js"></script>
+  <script src="./static/index.js"></script>
 </html>
